提交采集网址

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,8 @@ uvicorn
 pandas
 mysql-connector-python
 redis
-python-dotenv 
+python-dotenv
 httpx
-beautifulsoup4 
-lunarcalendar 
+beautifulsoup4
+lunarcalendar
+APScheduler 
