--- a/config.json
+++ b/config.json
@@ -23,7 +23,9 @@
   "AUTO_COLLECT": {
     "enabled": true,
     "retry_times": 3,
-    "am_time": "00:19",
+    "retry_interval": 180,
+    "normal_interval": 60,
+    "am_time": "19:06",
     "hk_time": "19:06",
     "source": "default"
   }
